# stoch

./: .gitignore  Cargo.toml  README.md
crates/stochastic-graphing/: Cargo.toml  README.md
crates/stochastic-graphing/src/: app.rs  main.rs
crates/stochastic-processes/: Cargo.toml
crates/stochastic-processes/src/: brownian.rs  lib.rs  mappings.rs  processes.rs  rvector.rs
crates/stochastic-processes/tests/: test_processes.rs
src/: app.rs  lib.rs  main.rs  processes.rs  rv_functions.rs  rv_mappings.rs  rvector.rs
